--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Greater Kuala Lumpur Transport Visualisations</title>
+  <title>Greater Kuala Lumpur Transport Dashboard</title>
 
   <!-- Vega / Vega-Lite / TopoJSON / Vega-Embed -->
   <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
@@ -11,26 +11,42 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 
   <style>
-    body { font-family: Arial, sans-serif; margin: 28px; background:#f0f4f8; color:#111; }
-    h1 { text-align:center; margin-bottom:6px; color:#003366; }
-    .section-title { text-align:center; margin-top:28px; margin-bottom:6px; font-weight:bold; color:#1f78b4; }
+    body { font-family: Arial, sans-serif; margin: 28px; background:#f5f7fa; color:#111; }
+    h1 { text-align:center; margin-bottom:10px; color:#003366; }
+    .section-title { text-align:center; margin-top:30px; margin-bottom:6px; font-weight:bold; color:#1f78b4; }
+    .section-desc { text-align:center; max-width:900px; margin:0 auto 12px; font-size:14px; color:#333; }
     .vis { display:flex; justify-content:center; margin: 10px 0 30px; }
     #dbg { background:#fff; border:1px solid #ddd; padding:8px; border-radius:6px; max-width:980px; margin:12px auto; white-space:pre-wrap; display:none; font-size:13px; color:#444;}
   </style>
 </head>
 <body>
-  <h1>Greater Kuala Lumpur — Transport Dashboard</h1>
 
+  <h1>Greater Kuala Lumpur — Urban Rail Network Visualisation</h1>
+
+  <!-- Section 1: Map -->
   <div class="section-title">Urban Rail Network Map</div>
+  <div class="section-desc">
+    The rail network in the Kuala Lumpur area is densest in the city itself, while surrounding regions such as Petaling, despite having a high population, are less dense. This suggests unbalanced development within the metropolitan area and indicates a lack of systematic urban planning.
+  </div>
   <div class="vis" id="map_vis">Loading map…</div>
 
-  <div class="section-title">Monthly Rail Ridership & Vehicle Count</div>
+  <!-- Section 2: Ridership -->
+  <div class="section-title">Monthly Rail Ridership</div>
+  <div class="section-desc">
+    Ridership across each line is relatively stable over time. Among all lines, the LRT Kelana Jaya line has the highest ridership, which corresponds to its passage through key areas of Kuala Lumpur.
+  </div>
   <div class="vis" id="ridership_vis">Loading ridership chart…</div>
+
+  <!-- Section 3: Vehicle Count -->
+  <div class="section-title">Monthly Vehicle Count</div>
+  <div class="section-desc">
+    Vehicle ownership in the Greater Kuala Lumpur area shows trends over the years, highlighting the distribution and growth of vehicles per region.
+  </div>
+  <div class="vis" id="vehicle_vis">Loading vehicle chart…</div>
 
   <div id="dbg"></div>
 
 <script>
-  // debug helper
   function dbg(msg){
     try{
       const el = document.getElementById('dbg');
@@ -41,78 +57,55 @@
     }
   }
 
-  // data files
-  const mapSpecPath = 'https://raw.githubusercontent.com/zhangkai427007/FIT3179_critical/main/urban-map-json';
-  const ridershipSpecPath = 'https://raw.githubusercontent.com/zhangkai427007/FIT3179_critical/main/ridership.json';
-  const vehicleSpecPath = 'https://raw.githubusercontent.com/zhangkai427007/FIT3179_critical/main/vehicle.json';
+  // Data URLs
+  const mapPath = 'https://raw.githubusercontent.com/zhangkai427007/FIT3179_critical/main/urban-map-json';
+  const ridershipPath = 'https://raw.githubusercontent.com/zhangkai427007/FIT3179_critical/main/ridership.json';
+  const vehiclePath = 'https://raw.githubusercontent.com/zhangkai427007/FIT3179_critical/main/vehicle.json';
 
-  async function checkFile(path){
-    try {
-      dbg('Fetching ' + path + ' ...');
-      const r = await fetch(path, {cache:'no-store'});
-      dbg(path + ' status=' + r.status + ' content-type=' + (r.headers.get('content-type')||''));
-      const preview = (await r.text()).slice(0,240).replace(/\n/g,' ');
-      dbg('Preview: ' + preview);
-      if (!r.ok) dbg('ERROR: HTTP ' + r.status + ' when fetching ' + path);
-      if (preview.trim().startsWith('<')) dbg('WARNING: fetched content for ' + path + ' looks like HTML.');
-      return r.ok;
-    } catch(err){
-      dbg('EXCEPTION fetching ' + path + ': ' + err);
-      return false;
-    }
+  async function embedCharts(){
+    // Map
+    vegaEmbed('#map_vis', mapPath, {renderer:'svg', actions:true})
+      .then(res=>dbg('Map embedded successfully.'))
+      .catch(err=>dbg('Map embed error: '+err));
+
+    // Ridership chart
+    const ridershipSpec = {
+      "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
+      "description": "Monthly ridership per line",
+      "width": 750, "height": 400,
+      "mark": {"type":"line","point":true},
+      "data": {"url": ridershipPath},
+      "encoding": {
+        "x": {"field":"month","type":"temporal","title":"Month"},
+        "y": {"field":"ridership","type":"quantitative","title":"Ridership"},
+        "color": {"field":"line","type":"nominal","title":"Line"},
+        "tooltip":[{"field":"line","title":"Line"},{"field":"ridership","title":"Ridership"}]
+      }
+    };
+    vegaEmbed('#ridership_vis', ridershipSpec, {renderer:'svg', actions:true})
+      .then(res=>dbg('Ridership chart embedded successfully.'))
+      .catch(err=>dbg('Ridership embed error: '+err));
+
+    // Vehicle chart
+    const vehicleSpec = {
+      "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
+      "description": "Monthly vehicle count per state",
+      "width": 750, "height": 400,
+      "mark": {"type":"line","point":true},
+      "data": {"url": vehiclePath},
+      "encoding": {
+        "x": {"field":"month","type":"temporal","title":"Month"},
+        "y": {"field":"vehicle_count","type":"quantitative","title":"Vehicle Count"},
+        "color": {"field":"state","type":"nominal","title":"State"},
+        "tooltip":[{"field":"state","title":"State"},{"field":"vehicle_count","title":"Vehicle Count"}]
+      }
+    };
+    vegaEmbed('#vehicle_vis', vehicleSpec, {renderer:'svg', actions:true})
+      .then(res=>dbg('Vehicle chart embedded successfully.'))
+      .catch(err=>dbg('Vehicle embed error: '+err));
   }
 
-  (async function(){
-    const okMap = await checkFile(mapSpecPath);
-    const okRid = await checkFile(ridershipSpecPath);
-    const okVeh = await checkFile(vehicleSpecPath);
-
-    // Embed map
-    if(okMap){
-      vegaEmbed('#map_vis', mapSpecPath, {renderer:'svg', actions:true})
-        .then(res => dbg('Map embedded successfully.'))
-        .catch(err => { dbg('Map embed error: '+err); console.error(err); });
-    } else {
-      document.getElementById('map_vis').textContent='Map spec not reachable.';
-    }
-
-    // Combine ridership & vehicle charts as layered chart
-    if(okRid && okVeh){
-      const chartSpec = {
-        "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
-        "description": "Monthly rail ridership and vehicle count for Greater KL",
-        "width": 750,
-        "height": 400,
-        "layer": [
-          {
-            "data": {"url": ridershipSpecPath},
-            "mark": {"type":"line","color":"#e0115f"},
-            "encoding": {
-              "x":{"field":"month","type":"temporal","title":"Month"},
-              "y":{"field":"ridership","type":"quantitative","title":"Ridership"},
-              "tooltip":[{"field":"line","title":"Line"},{"field":"ridership","title":"Ridership"}]
-            }
-          },
-          {
-            "data": {"url": vehicleSpecPath},
-            "mark": {"type":"line","color":"#1f78b4"},
-            "encoding": {
-              "x":{"field":"month","type":"temporal","title":"Month"},
-              "y":{"field":"vehicle_count","type":"quantitative","title":"Vehicle Count"},
-              "tooltip":[{"field":"state","title":"State"},{"field":"vehicle_count","title":"Vehicle Count"}]
-            }
-          }
-        ]
-      };
-      vegaEmbed('#ridership_vis', chartSpec, {renderer:'svg', actions:true})
-        .then(res=>dbg('Ridership chart embedded successfully.'))
-        .catch(err=>{ dbg('Ridership embed error: '+err); console.error(err); });
-    } else {
-      document.getElementById('ridership_vis').textContent='Ridership/Vehicle spec not reachable.';
-    }
-
-  })();
+  embedCharts();
 </script>
-
 </body>
 </html>
