--- a/index.html
+++ b/index.html
@@ -1,111 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <title>Greater Kuala Lumpur Transport Dashboard</title>
-
-  <!-- Vega / Vega-Lite / TopoJSON / Vega-Embed -->
-  <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
-  <script src="https://unpkg.com/topojson-client@3/dist/topojson-client.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
-
-  <style>
-    body { font-family: Arial, sans-serif; margin: 28px; background:#f5f7fa; color:#111; }
-    h1 { text-align:center; margin-bottom:10px; color:#003366; }
-    .section-title { text-align:center; margin-top:30px; margin-bottom:6px; font-weight:bold; color:#1f78b4; }
-    .section-desc { text-align:center; max-width:900px; margin:0 auto 12px; font-size:14px; color:#333; }
-    .vis { display:flex; justify-content:center; margin: 10px 0 30px; }
-    #dbg { background:#fff; border:1px solid #ddd; padding:8px; border-radius:6px; max-width:980px; margin:12px auto; white-space:pre-wrap; display:none; font-size:13px; color:#444;}
-  </style>
-</head>
-<body>
-
-  <h1>Greater Kuala Lumpur — Urban Rail Network Visualisation</h1>
-
-  <!-- Section 1: Map -->
-  <div class="section-title">Urban Rail Network Map</div>
-  <div class="section-desc">
-    The rail network in the Kuala Lumpur area is densest in the city itself, while surrounding regions such as Petaling, despite having a high population, are less dense. This suggests unbalanced development within the metropolitan area and indicates a lack of systematic urban planning.
-  </div>
-  <div class="vis" id="map_vis">Loading map…</div>
-
-  <!-- Section 2: Ridership -->
-  <div class="section-title">Monthly Rail Ridership</div>
-  <div class="section-desc">
-    Ridership across each line is relatively stable over time. Among all lines, the LRT Kelana Jaya line has the highest ridership, which corresponds to its passage through key areas of Kuala Lumpur.
-  </div>
-  <div class="vis" id="ridership_vis">Loading ridership chart…</div>
-
-  <!-- Section 3: Vehicle Count -->
-  <div class="section-title">Monthly Vehicle Count</div>
-  <div class="section-desc">
-    Vehicle ownership in the Greater Kuala Lumpur area shows trends over the years, highlighting the distribution and growth of vehicles per region.
-  </div>
-  <div class="vis" id="vehicle_vis">Loading vehicle chart…</div>
-
-  <div id="dbg"></div>
+<div class="section-title">Monthly Rail Ridership</div>
+<div class="section-desc">
+  Ridership across each line is relatively stable over time. Among all lines, the LRT Kelana Jaya line has the highest ridership, passing through key areas of Kuala Lumpur.
+</div>
+<div class="vis" id="ridership_vis"></div>
 
 <script>
-  function dbg(msg){
-    try{
-      const el = document.getElementById('dbg');
-      el.style.display='block';
-      el.textContent += msg + "\n";
-    } catch(e){
-      console.log(msg);
+  const ridershipSpec = {
+    "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
+    "description": "Monthly ridership per line",
+    "width": 750, "height": 400,
+    "data": {"url": "https://raw.githubusercontent.com/zhangkai427007/FIT3179_critical/main/ridership.json"},
+    "mark": {"type":"line", "point":true},
+    "encoding": {
+      "x": {"field":"month","type":"temporal","title":"Month"},
+      "y": {"field":"ridership","type":"quantitative","title":"Ridership"},
+      "color": {"field":"line","type":"nominal","title":"Line"},
+      "tooltip":[
+        {"field":"line","title":"Line"},
+        {"field":"ridership","title":"Ridership"}
+      ]
     }
-  }
+  };
 
-  // Data URLs
-  const mapPath = 'https://raw.githubusercontent.com/zhangkai427007/FIT3179_critical/main/urban-map-json';
-  const ridershipPath = 'https://raw.githubusercontent.com/zhangkai427007/FIT3179_critical/main/ridership.json';
-  const vehiclePath = 'https://raw.githubusercontent.com/zhangkai427007/FIT3179_critical/main/vehicle.json';
-
-  async function embedCharts(){
-    // Map
-    vegaEmbed('#map_vis', mapPath, {renderer:'svg', actions:true})
-      .then(res=>dbg('Map embedded successfully.'))
-      .catch(err=>dbg('Map embed error: '+err));
-
-    // Ridership chart
-    const ridershipSpec = {
-      "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
-      "description": "Monthly ridership per line",
-      "width": 750, "height": 400,
-      "mark": {"type":"line","point":true},
-      "data": {"url": ridershipPath},
-      "encoding": {
-        "x": {"field":"month","type":"temporal","title":"Month"},
-        "y": {"field":"ridership","type":"quantitative","title":"Ridership"},
-        "color": {"field":"line","type":"nominal","title":"Line"},
-        "tooltip":[{"field":"line","title":"Line"},{"field":"ridership","title":"Ridership"}]
-      }
-    };
-    vegaEmbed('#ridership_vis', ridershipSpec, {renderer:'svg', actions:true})
-      .then(res=>dbg('Ridership chart embedded successfully.'))
-      .catch(err=>dbg('Ridership embed error: '+err));
-
-    // Vehicle chart
-    const vehicleSpec = {
-      "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
-      "description": "Monthly vehicle count per state",
-      "width": 750, "height": 400,
-      "mark": {"type":"line","point":true},
-      "data": {"url": vehiclePath},
-      "encoding": {
-        "x": {"field":"month","type":"temporal","title":"Month"},
-        "y": {"field":"vehicle_count","type":"quantitative","title":"Vehicle Count"},
-        "color": {"field":"state","type":"nominal","title":"State"},
-        "tooltip":[{"field":"state","title":"State"},{"field":"vehicle_count","title":"Vehicle Count"}]
-      }
-    };
-    vegaEmbed('#vehicle_vis', vehicleSpec, {renderer:'svg', actions:true})
-      .then(res=>dbg('Vehicle chart embedded successfully.'))
-      .catch(err=>dbg('Vehicle embed error: '+err));
-  }
-
-  embedCharts();
+  vegaEmbed('#ridership_vis', ridershipSpec, {renderer:'svg', actions:true});
 </script>
-</body>
-</html>
+
+<div class="section-title">Monthly Vehicle Count</div>
+<div class="section-desc">
+  Vehicle ownership in the Greater Kuala Lumpur area shows trends over the years, highlighting the distribution and growth of vehicles per region.
+</div>
+<div class="vis" id="vehicle_vis"></div>
+
+<script>
+  const vehicleSpec = {
+    "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
+    "description": "Monthly vehicle count per state",
+    "width": 750, "height": 400,
+    "data": {"url": "https://raw.githubusercontent.com/zhangkai427007/FIT3179_critical/main/vehicle.json"},
+    "mark": {"type":"line", "point":true},
+    "encoding": {
+      "x": {"field":"month","type":"temporal","title":"Month"},
+      "y": {"field":"vehicle_count","type":"quantitative","title":"Vehicle Count"},
+      "color": {"field":"state","type":"nominal","title":"State"},
+      "tooltip":[
+        {"field":"state","title":"State"},
+        {"field":"vehicle_count","title":"Vehicle Count"}
+      ]
+    }
+  };
+
+  vegaEmbed('#vehicle_vis', vehicleSpec, {renderer:'svg', actions:true});
+</script>
