--- a/index.html
+++ b/index.html
@@ -7,105 +7,91 @@
   <!-- Vega / Vega-Lite / TopoJSON / Vega-Embed -->
   <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
-  <script src="https://unpkg.com/topojson-client@3/dist/topojson-client.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 
   <style>
     body { font-family: Arial, sans-serif; margin: 28px; background:#fafafa; color:#111; }
     h1 { text-align:center; margin-bottom:6px; }
     .section-title { text-align:center; margin-top:28px; margin-bottom:6px; font-size:18px; }
-    .section-desc { text-align:center; margin-bottom:16px; max-width:850px; margin-left:auto; margin-right:auto; font-size:14px; color:#333; }
     .vis { display:flex; justify-content:center; margin: 10px 0 30px; }
-    #dbg { background:#fff; border:1px solid #ddd; padding:8px; border-radius:6px; max-width:980px; margin:12px auto; white-space:pre-wrap; display:none; font-size:13px; color:#444;}
+    .annotation { max-width:900px; margin: 0 auto 20px; font-size:14px; color:#333; line-height:1.5; }
   </style>
 </head>
 <body>
-  <h1>Greater Kuala Lumpur — Rail Map, Ridership & Vehicle Count</h1>
 
-  <!-- Urban Rail Map -->
-  <div class="section-title">Urban Rail Network Map</div>
-  <div class="section-desc">
-    The Kuala Lumpur metropolitan area has the densest rail network, even denser than Petaling, which has the largest population. This highlights uneven urban development and lack of scientific planning in the metropolitan region.
-  </div>
-  <div class="vis" id="map_vis">Loading map…</div>
+<h1>Greater Kuala Lumpur — Urban Rail Analysis</h1>
 
-  <!-- Ridership Chart -->
-  <div class="section-title">Monthly Rail Ridership — 2024</div>
-  <div class="section-desc">
-    Ridership across each line is relatively stable. The LRT Kelana Jaya line has the highest ridership, serving key areas in Kuala Lumpur.
-  </div>
-  <div class="vis" id="ridership_vis">Loading ridership chart…</div>
+<div class="section-title">1. Urban Rail Network Map</div>
+<div class="annotation">
+  The rail network in Kuala Lumpur is densest within the city, especially around central KL and Petaling. Interestingly, areas like Petaling have a dense network even though their population is not the highest, suggesting uneven urban development and suboptimal transport planning in the metropolitan region.
+</div>
+<div class="vis" id="map_vis">Loading map…</div>
 
-  <!-- Vehicle Count Chart -->
-  <div class="section-title">Monthly Vehicle Count — Greater Kuala Lumpur</div>
-  <div class="section-desc">
-    Vehicle ownership trends over time show the distribution and growth of vehicles per region in the metropolitan area.
-  </div>
-  <div class="vis" id="vehicle_vis">Loading vehicle chart…</div>
+<div class="section-title">2. Daily Rail Ridership by Line</div>
+<div class="annotation">
+  Ridership across all lines is relatively stable. The LRT Kelana Jaya line has the highest daily ridership, which aligns with the map showing it passes through central KL, an important urban corridor.
+</div>
+<div class="vis" id="ridership_vis">Loading ridership chart…</div>
 
-  <div id="dbg"></div>
+<div class="section-title">3. Vehicle Ownership per Region</div>
+<div class="annotation">
+  Monthly vehicle counts indicate trends in urban mobility. The data shows the level of vehicle ownership across key areas in Greater Kuala Lumpur, highlighting the reliance on private transport.
+</div>
+<div class="vis" id="vehicle_vis">Loading vehicle chart…</div>
 
 <script>
-  function dbg(msg){
-    try {
-      const el = document.getElementById('dbg');
-      el.style.display='block';
-      el.textContent += msg + "\n";
-    } catch(e){
-      console.log(msg);
-    }
-  }
+(async function(){
 
-  // JSON paths (replace with raw URLs if needed)
-  const mapSpecPath = 'urban-map-json';
-  const ridershipDataPath = 'https://raw.githubusercontent.com/zhangkai427007/FIT3179_critical/main/ridership.json';
-  const vehicleDataPath = 'https://raw.githubusercontent.com/zhangkai427007/FIT3179_critical/main/vehicle.json';
+  // 1️⃣ Urban Map
+  vegaEmbed('#map_vis', 'https://raw.githubusercontent.com/zhangkai427007/FIT3179_critical/main/urban-map-json', {renderer:'svg', actions:true})
+    .then(() => console.log('Map embedded successfully'))
+    .catch(err => {console.error(err); document.getElementById('map_vis').textContent='Failed to load map';});
 
-  // Embed Urban Map
-  vegaEmbed('#map_vis', mapSpecPath, {renderer:'svg', actions:true})
-    .then(res => dbg('Map embedded successfully.'))
-    .catch(err => {
-      dbg('Map embed error: ' + (err && err.message ? err.message : String(err)));
-      document.getElementById('map_vis').textContent = 'Failed to load the map. See console/dbg for details.';
-    });
-
-  // Embed Ridership Chart
-  const ridershipSpec = {
+  // 2️⃣ Ridership Line Chart
+  vegaEmbed('#ridership_vis', {
     "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
-    "description": "Monthly ridership per line",
-    "width": 750, "height": 400,
-    "data": {"url": ridershipDataPath},
-    "mark": {"type":"line","point":true},
+    "width": 700, "height": 400,
+    "data": {
+      "url": "https://raw.githubusercontent.com/zhangkai427007/fit3179_week10/main/ridership.json"
+    },
+    "mark": {"type":"line", "point":true},
     "encoding": {
-      "x": {"field":"month","type":"temporal","title":"Month"},
-      "y": {"field":"ridership","type":"quantitative","title":"Ridership"},
-      "color": {"field":"line","type":"nominal","title":"Line"},
-      "tooltip":[
-        {"field":"line","title":"Line"},
-        {"field":"ridership","title":"Ridership"}
+      "x": {"field":"month", "type":"temporal", "title":"Month"},
+      "y": {"field":"ridership", "type":"quantitative", "title":"Daily Ridership"},
+      "color": {"field":"line", "type":"nominal", "title":"Line"},
+      "tooltip": [
+        {"field":"line","type":"nominal","title":"Line"},
+        {"field":"month","type":"temporal","title":"Month"},
+        {"field":"ridership","type":"quantitative","title":"Ridership"}
       ]
     }
-  };
-  vegaEmbed('#ridership_vis', ridershipSpec, {renderer:'svg', actions:true});
+  }).then(() => console.log('Ridership chart embedded'))
+    .catch(err => {console.error(err); document.getElementById('ridership_vis').textContent='Failed to load ridership';});
 
-  // Embed Vehicle Count Chart
-  const vehicleSpec = {
+  // 3️⃣ Vehicle Ownership Line Chart
+  vegaEmbed('#vehicle_vis', {
     "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
-    "description": "Monthly vehicle count per state",
-    "width": 750, "height": 400,
-    "data": {"url": vehicleDataPath},
-    "mark": {"type":"line","point":true},
+    "width": 700, "height": 400,
+    "data": {
+      "url": "https://raw.githubusercontent.com/zhangkai427007/FIT3179_critical/main/vehicle.json"
+    },
+    "mark": {"type":"line", "point":true},
     "encoding": {
-      "x": {"field":"month","type":"temporal","title":"Month"},
-      "y": {"field":"vehicle_count","type":"quantitative","title":"Vehicle Count"},
-      "color": {"field":"state","type":"nominal","title":"State"},
-      "tooltip":[
-        {"field":"state","title":"State"},
-        {"field":"vehicle_count","title":"Vehicle Count"}
+      "x": {"field":"month", "type":"temporal", "title":"Month"},
+      "y": {"field":"vehicle_count", "type":"quantitative", "title":"Number of Vehicles"},
+      "color": {"field":"state", "type":"nominal", "title":"Region"},
+      "tooltip": [
+        {"field":"state","type":"nominal","title":"Region"},
+        {"field":"month","type":"temporal","title":"Month"},
+        {"field":"vehicle_count","type":"quantitative","title":"Vehicle Count"}
       ]
     }
-  };
-  vegaEmbed('#vehicle_vis', vehicleSpec, {renderer:'svg', actions:true});
+  }).then(() => console.log('Vehicle chart embedded'))
+    .catch(err => {console.error(err); document.getElementById('vehicle_vis').textContent='Failed to load vehicle chart';});
+
+})();
 </script>
+
 </body>
 </html>
+
