--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="vis" id="map_vis">Loading map…</div>
   <div class="annotation">
     The rail network in Kuala Lumpur is the densest in the metropolitan area. 
-    Interestingly, the Petaling region has a dense rail network despite not being the most populous. 
+    Interestingly, the Kuala Lumpur region has a dense rail network despite not being the most populous. 
     This suggests that urban rail development is uneven and may lack systematic planning across the Klang Valley.
   </div>
 
